...
  public static let profileSummary = "sample_profile_summary"
  public static let sessionCard = "sample_session_card"
  public static let sessionCountdown = "sample_session_countdown"
  public static let sessionEndedBanner = "sample_session_ended_banner"
  public static let scenarioDrawerButton = "sample_scenario_drawer_button"
  public static let signOut = "sample_sign_out"
  public static let signOutConfirm = "sample_sign_out_confirm"
  public static let versionLabel = "sample_version_label"
  public static let settingEnhancedSmartSelfie = "sample_setting_enhanced_smart_selfie"
  public static let settingAgentMode = "sample_setting_agent_mode"
  public static let settingAppearance = "sample_setting_appearance"
  public static let appearanceSheet = "sample_appearance_sheet"
  public static let appearanceOptionPrefix = "sample_appearance_option"
...
  public static let countryOptionPrefix = "sample_country_option"
  public static let idTypeOptionPrefix = "sample_idtype_option"
  public static let profileRowPrefix = "sample_profile_row"
  public static let profileConfigFieldPrefix = "sample_profile_config_field"

  public static let kycFormScreen = "sample_kyc_form_screen"
  public static let countryTrigger = "sample_country_trigger"
  public static let idTypeTrigger = "sample_idtype_trigger"
  public static let idNumberInput = "sample_idnumber_input"
  public static let kycContinue = "sample_kyc_continue"
  public static let tokenFloat = "sample_token_float"
  public static let countrySheet = "sample_country_sheet"
  public static let countrySearch = "sample_country_search"
  public static let countryEmpty = "sample_country_empty"
...
  public static let captureModeOptionPrefix = "sample_capture_mode_option"
  public static let genericDocumentOrientationPrefix = "sample_generic_document_orientation"
  public static let genericDocumentAspectRatioPrefix = "sample_generic_document_aspect_ratio"

  public static let userDetailsScreen = "sample_user_details_screen"
  public static let userDetailsHint = "sample_user_details_hint"
  public static let userDetailsContinue = "sample_user_details_continue"
  public static let rememberDetailsSwitch = "sample_remember_details_switch"
  public static let userDetailsProfile = "sample_user_details_profile"

  public static let authUserIdScreen = "sample_auth_user_id_screen"
  public static let authUserIdInput = "sample_auth_user_id_input"
  public static let authUserIdOptionPrefix = "sample_auth_user_id_option"
...
  public static let authUserIdContinue = "sample_auth_user_id_continue"

  public static let profilesScreen = "sample_profiles_screen"
  public static let createProfile = "sample_create_profile"
  public static let profileConfigScreen = "sample_profile_config_screen"
  public static let profileConfigCallbackUrl = "sample_profile_config_callback_url"
  public static let profileConfigSave = "sample_profile_config_save"
  public static let profileConfigContactError = "sample_profile_config_contact_error"
  public static let profileConfigName = "sample_profile_config_name"
  public static let profileConfigDelete = "sample_profile_config_delete"
  public static let profileDeleteConfirm = "sample_profile_delete_confirm"
  public static let profileSwitchNew = "sample_profile_switch_new"
  public static let profileSwitchSheet = "sample_profile_switch_sheet"
  public static let newProfileSheet = "sample_new_profile_sheet"
  public static let newProfileName = "sample_new_profile_name"
  public static let newProfileFirstName = "sample_new_profile_first_name"
  public static let newProfileLastName = "sample_new_profile_last_name"
  public static let newProfileEmail = "sample_new_profile_email"
  public static let newProfilePhone = "sample_new_profile_phone"
  public static let newProfileSave = "sample_new_profile_save"

  public static let licensesScreen = "sample_licenses_screen"
  /// Only reachable when the generated asset did not ship, which is the only way the list is empty.
  public static let licensesEmpty = "sample_licenses_empty"
  public static let licenseRowPrefix = "sample_license_row"
  public static let licenseTextPrefix = "sample_license_text"
...
