...
        id: "p-1",
        organisation: "UpTech Finance",
        defaults: UseSmileIDSampleUserDetails(firstName: "Kwame", lastName: "Asante")
      ),
      UseSmileIDSampleProfile(
        id: "p-2",
        organisation: "Kazi Microlending",
        defaults: UseSmileIDSampleUserDetails(firstName: "Amina", lastName: "Diallo")
      ),
      UseSmileIDSampleProfile(
        id: "p-3",
        organisation: "PesaLink",
        defaults: UseSmileIDSampleUserDetails(firstName: "Tunde", lastName: "Okafor")
      )
    ]
  }
}

...
